CD/kubernettes/azure-aks-istio-single-service-traffic.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: azure-back-end-vs
spec:
  hosts:
  - azure-back-end
  http:
  - route:
    - destination:
        host: azure-back-end
        subset: v1
